<resources>
    <string name="app_name">KuantoGanha</string>
    <string name="save">Save</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="username">Username</string>
    <string name="welcome">Welcome!</string>
    <string name="perfil">Perfil</string>
    <string name="login_failed">Login failed:</string>
    <string name="login_successful">Login Successful</string>
    <string name="please_fill_in_all_fields">Please fill in all fields</string>
    <string name="network_error">Network Error</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="error_during_registration">Error During Registration</string>
    <string name="error_fetching_data">Error on Fetching Data</string>
    <string name="error_processing_data">Error Processing Data</string>
    <string name="all_districts">All Districts</string>
    <string name="error_loading_districts">Error Loading Districts</string>
    <string name="error_fetching_districts">Error Fetching Districts</string>
    <string name="Salary_Gross_Average">Salary Gross Average €</string>
    <string name="Last_20_Professions_added">Last 20 Professions Added</string>
</resources>